# pyflwdir

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  .zenodo.json  AUTHORS.txt  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CODE_OF_CONDUCT.txt  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NOTICE  README.rst  environment.yml  index.html  make_env.py  pixi.toml  project_setup.rst  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.yaml
.github/workflows/: docs.yml  linting.yml  publish.yml  test_cov.yml  tests.yml
0.1.dev1/: changelog.html  index.html  quickstart.html  reference.html  search.html
0.1.dev1/_modules/: index.html
0.1.dev1/notebooks/: basins.ipynb  flwdir.html  from_dem.ipynb  streams.html
0.5.6/: changelog.html  contributing.html  genindex.html  installation.html  objects.inv  search.html  searchindex.js
0.5.6/_generated/: pyflwdir.FlwdirRaster.accuflux.html  pyflwdir.FlwdirRaster.area.html  pyflwdir.FlwdirRaster.basin_bounds.html  pyflwdir.FlwdirRaster.basin_outlets.html  pyflwdir.FlwdirRaster.bounds.html  pyflwdir.FlwdirRaster.dem_dig_d4.html  pyflwdir.FlwdirRaster.distnc.html  pyflwdir.FlwdirRaster.extent.html  pyflwdir.FlwdirRaster.fillnodata.html  pyflwdir.FlwdirRaster.html  pyflwdir.FlwdirRaster.idxs_ds.html  pyflwdir.FlwdirRaster.idxs_us_main.html  pyflwdir.FlwdirRaster.main_upstream.html  pyflwdir.FlwdirRaster.mask.html  pyflwdir.FlwdirRaster.moving_average.html  pyflwdir.FlwdirRaster.n_upstream.html  pyflwdir.FlwdirRaster.ncells.html  pyflwdir.FlwdirRaster.outflow_idxs.html  pyflwdir.FlwdirRaster.repair_loops.html  pyflwdir.FlwdirRaster.snap.html  pyflwdir.FlwdirRaster.stream_distance.html  pyflwdir.FlwdirRaster.stream_order.html  pyflwdir.FlwdirRaster.streams.html  pyflwdir.FlwdirRaster.subbasins_pfafstetter.html  pyflwdir.FlwdirRaster.subbasins_streamorder.html  pyflwdir.FlwdirRaster.subgrid_rivmed.html  pyflwdir.FlwdirRaster.ucat_area.html  pyflwdir.FlwdirRaster.upscale_error.html  pyflwdir.FlwdirRaster.upstream_sum.html  pyflwdir.dem.fill_depressions.html  pyflwdir.from_array.html  pyflwdir.from_dem.html  pyflwdir.gis_utils.reggrid_area.html  pyflwdir.gis_utils.spread2d.html  pyflwdir.regions.region_area.html  pyflwdir.regions.region_sum.html
0.5.6/api/: flwdirraster.html  region_utils.html
0.5.7/: changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  reference.html  search.html  searchindex.js
0.5.7/_examples/: basins.html  elevation_indices.html  flwdir.html  from_dem.html  streams.html  tracing.html  upscaling.html
0.5.7/_generated/: pyflwdir.FlwdirRaster.accuflux.html  pyflwdir.FlwdirRaster.add_pits.html  pyflwdir.FlwdirRaster.area.html  pyflwdir.FlwdirRaster.basin_bounds.html  pyflwdir.FlwdirRaster.basin_outlets.html  pyflwdir.FlwdirRaster.basins.html  pyflwdir.FlwdirRaster.bounds.html  pyflwdir.FlwdirRaster.dem_adjust.html  (+63 more)
0.5.8/: changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  reference.html  search.html  searchindex.js
data/: rhine_d8.tif
dev/: background.html  basins.html  basins.ipynb  changelog.html  contributing.html  elevation_indices.html  elevation_indices.ipynb  flwdir.html  flwdir.ipynb  from_dem.html  from_dem.ipynb  genindex.html  index.html  installation.html  objects.inv  quickstart.html  reference.html  search.html  searchindex.js  streams.html  streams.ipynb  tracing.html  tracing.ipynb  upscaling.html  upscaling.ipynb
docs/: Makefile  api.rst  background.rst  changelog.rst  clean.py  conf.py  contributing.rst  flwdir.rst  index.rst  installation.rst  make.bat  quickstart.rst  reference.rst
envs/: pyflwdir-dev.yml  pyflwdir-docs.yml  pyflwdir-test.yml
examples/: basins.ipynb  elevation_indices.ipynb  flwdir.ipynb  from_dem.ipynb  rhine_elv0.tif  streams.ipynb  tracing.ipynb  upscaling.ipynb  utils.py
notebooks/: basins.ipynb  elevation_indices.ipynb  flwdir.ipynb  from_dem.ipynb  streams.ipynb  tracing.ipynb  upscaling.ipynb
numba_sheds/: __init__.py  numba_sheds.py
pyflwdir/: __init__.py  __version__.py  arithmetics.py  basin.py  basin_descriptors.py  basin_utils.py  basins.py  bathymetry.py  catchment.py  core.py  core_conversion.py  core_d8.py  core_flow.py  core_ldd.py  core_nextidx.py  core_nextxy.py  d8_scaling.py  d8_scaling_performance.py  d8_scaling_subgrid.py  dem.py  features.py  flux.py  flwdir.py  flwdir_raster.py  flwdir_stats.py  gis_utils.py  gridtools.py  network.py  numba_stats.py  ordered.py  pyflwdir.py  regions.py  rivers.py  slope.py  streams.py  subcatch.py  subgrid.py  tif_io.py  tree.py  unitcatchments.py  (+3 more)
scripts/: flow_direction_data.ipynb
tests/: __init__.py  conftest.py  flwdir.asc  flwdir1.asc  test_arithmetics.py  test_core.py  test_core_xx.py  test_dem.py  test_flwdir.py  test_gis_utils.py  test_gridtools.py  test_lint.py  test_numba-sheds.py  test_numba_sheds.py  test_numba_stats.py  test_pyflwdir.py  test_pyflwdir_core.py  test_streams_basins.py  test_subgrid.py  test_ucatch.py  test_upscale.py  try_upscale.py
v0.5.10/: changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  reference.html  search.html  searchindex.js
v0.5.8/: changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  reference.html  search.html  searchindex.js
v0.5.9/: changelog.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  reference.html  search.html
(+499 files in other folders)
