[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyflwdir"
authors = [{name = "Dirk Eilander", email = "dirk.eilander@deltares.nl"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "affine",
    "numba>=0.54",
    "numpy",
    "scipy",
]
requires-python = ">=3.9"

[project.urls]
Home = "https://github.com/Deltares/pyflwdir"
Documentation = "https://deltares.github.io/pyflwdir"

[project.optional-dependencies]
test = [
    "black[jupyter]",
    "pre-commit",
	"pytest>=2.7.3",
	"pytest-cov",
]
doc = [
	"nbsphinx",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx_design",
]
examples = [
    "cartopy>=0.20",
    "descartes",
    "geopandas>0.8",
    "jupyter",
    "matplotlib",
    "rasterio",
]

full = ["pyflwdir[test, doc, examples]"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flit.sdist]
include = ["pyflwdir"]
exclude = ["docs", "notebooks", "envs", "tests", "binder", ".github"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.make_env]
channels = ["conda-forge"]
deps_not_in_conda = [
  "sphinx_design",
  "black[jupyter]",
]
